18 April 2019: Ralph
	- Scrub RRs from answer section when reusing NXDOMAIN message for
	  subdomain answers.
	- For harden-below-nxdomain: do not consider a name to be non-exitent
	  when message contains a CNAME record.

18 April 2019: Wouter
	- travis build file.

16 April 2019: Wouter
	- Better braces in if statement in TCP fastopen code.
	- iana portlist updated.

15 April 2019: Wouter
	- Fix tls write event for read state change to re-call SSL_write and
	  not resume the TLS handshake.

11 April 2019: George
	- Update python documentation for init_standard().
	- Typos.

11 April 2019: Wouter
	- Fix that auth zone uses correct network type for sockets for
	  SOA serial probes.  This fixes that probes fail because earlier
	  probe addresses are unreachable.
	- Fix that auth zone fails over to next master for timeout in tcp.
	- Squelch SSL read and write connection reset by peer and broken pipe 
	  messages.  Verbosity 2 and higher enables them.

8 April 2019: Wouter
	- Fix to use event_assign with libevent for thread-safety.
	- verbose information about auth zone lookup process, also lookup
	  start, timeout and fail.
	- Fix #17: Add python module example from Jan Janak, that is a
	  plugin for the Unbound DNS resolver to resolve DNS records in
	  multicast DNS [RFC 6762] via Avahi.  The plugin communicates
	  with Avahi via DBus. The comment section at the beginning of
	  the file contains detailed documentation.
	- Fix to wipe ssl ticket keys from memory with explicit_bzero,
	  if available.

5 April 2019: Wouter
	- Fix to reinit event structure for accepted TCP (and TLS) sockets.

4 April 2019: Wouter
	- Fix spelling error in log output for event method.

3 April 2019: Wouter
	- Move goto label in answer_from_cache to the end of the function
	  where it is more visible.
	- Fix auth-zone NSEC3 response for wildcard nodata answers,
	  include the closest encloser in the answer.

2 April 2019: Wouter